ExtendingKubernetes/mutatingcontroller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kuar-validator
webhooks:
  - name: validator.kuar.com
    rules:
      - apiGroups: ["beta.kuar.com"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["loadtests"]
    clientConfig:
      # Substitute the appropriate IP address for your webhook
      url: https://localhost:8080
      # This should be the base64-encoded CA certificate for your cluster,
      # you can find it in your ${KUBECONFIG} file
      caBundle: ""
      #caBundle: REPLACEME
    admissionReviewVersions: ["v1"]
    sideEffects: None
